tests/negative/neg_pr1162_removed_representation_clause.safe
package neg_pr1162_removed_representation_clause

   subtype byte is integer (0 to 255)

   for byte'size use 8
